Add server start args.